<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<packaging>jar</packaging>
	<groupId>com.group_8</groupId>
	<artifactId>universal_gift_registry</artifactId>
	<version>3.0</version>
	<name>universal_gift_registry</name>
	<description>Universal Gift Registry project for SWE.</description>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.source>21</maven.compiler.source>
    	<maven.compiler.target>21</maven.compiler.target>
		<java.version>21</java.version>
		<start-class>com.group_8.universal_gift_registry.Launcher</start-class>
	</properties>
	<dependencies>
		<dependency>
		    <groupId>com.microsoft.sqlserver</groupId>
		    <artifactId>mssql-jdbc</artifactId>
		    <version>9.5.0.jre17-preview</version> 
		</dependency>
		<dependency>
        	<groupId>org.openjfx</groupId>
        	<artifactId>javafx-base</artifactId>
        	<version>21.0.2</version>
    	</dependency>
		<dependency>
        	<groupId>org.openjfx</groupId>
        	<artifactId>javafx-controls</artifactId>
        	<version>21.0.2</version>
    	</dependency>
    	<dependency>
        	<groupId>org.openjfx</groupId>
        	<artifactId>javafx-fxml</artifactId>
        	<version>21.0.2</version>
    	</dependency>
    	<dependency>
        	<groupId>org.openjfx</groupId>
        	<artifactId>javafx-media</artifactId>
        	<version>21.0.2</version>
    	</dependency>
    	<dependency>
        	<groupId>org.openjfx</groupId>
        	<artifactId>javafx-graphics</artifactId>
        	<version>21.0.2</version>
    	</dependency>
    	<dependency>
        	<groupId>org.openjfx</groupId>
        	<artifactId>javafx-swing</artifactId>
        	<version>21.0.2</version>
    	</dependency>
    	<dependency>
        	<groupId>org.openjfx</groupId>
        	<artifactId>javafx-web</artifactId>
        	<version>21.0.2</version>
    	</dependency>
    	<dependency>
		    <groupId>jakarta.persistence</groupId>
		    <artifactId>jakarta.persistence-api</artifactId>
		    <version>3.2.0-M2</version>
		</dependency>
		<dependency>
		    <groupId>javax.xml.bind</groupId>
		    <artifactId>jaxb-api</artifactId>
		    <version>2.3.1</version>
		</dependency>
		<dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.8.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.8.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testfx</groupId>
            <artifactId>testfx-core</artifactId>
            <version>4.0.16-alpha</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testfx</groupId>
            <artifactId>testfx-junit5</artifactId>
            <version>4.0.16-alpha</version>
            <scope>test</scope>
        </dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
			    <artifactId>maven-compiler-plugin</artifactId>
			    <version>3.9.0</version>
			    <configuration>
			        <release>21</release>
			    </configuration>
			</plugin>
	        <plugin>
	            <groupId>org.codehaus.mojo</groupId>
	            <artifactId>exec-maven-plugin</artifactId>
	            <version>3.0.0</version>
	            <configuration>
	                <mainClass>com.group_8.universal_gift_registry.Launcher</mainClass>
	                <arguments>
	                    <argument>--illegal-access=permit</argument>
	                </arguments>
	            </configuration>
	            <executions>
	                <execution>
	                    <goals>
	                        <goal>java</goal>
	                    </goals>
	                </execution>
	            </executions>
	        </plugin>
	        <plugin>
			    <groupId>org.openjfx</groupId>
			    <artifactId>javafx-maven-plugin</artifactId>
			    <version>0.0.8</version>
			    <configuration>
			        <mainClass>com.group_8.universal_gift_registry.Launcher</mainClass>
			    </configuration>
			</plugin>
	        <plugin>
		        <groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-shade-plugin</artifactId>
		        <version>3.5.2</version>
		        <configuration>
				    <transformers>
				        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
				            <mainClass>com.group_8.universal_gift_registry.Launcher</mainClass>
				        </transformer>
				        <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
				    </transformers>
				    <filters>
				        <filter>
				            <artifact>*:*</artifact>
				            <excludes>
				                <exclude>META-INF/*.SF</exclude>
				                <exclude>META-INF/*.DSA</exclude>
				                <exclude>META-INF/*.RSA</exclude>
				            </excludes>
				        </filter>
				    </filters>
				</configuration>
		        <executions>
		          <execution>
		            <phase>package</phase>
		            <goals>
		              <goal>shade</goal>
		            </goals>
		          </execution>
		        </executions>
		    </plugin>
		</plugins>
	</build>
</project>
